<?xml version="1.0"?>
<package>
  <name>particle_filter</name>
  <version>1.0.0</version>
  <description>Monte Carlo Localization using Particle Filter for ROS</description>

  <maintainer email="nikhiljaiyam6@gmail.com">Nikhil Jaiyam</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
